--- a/main/BUILD.bazel
+++ b/main/BUILD.bazel
@@ -1,18 +1,18 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
-    name = "foo_lib",
+    name = "main_lib",
     srcs = ["main.go"],
-    importpath = "github.com/cirruslabs/backbone-services/foo",
+    importpath = "github.com/cirruslabs/backbone-services/main",
     visibility = ["//visibility:private"],
     deps = [
-        "//cache:foo",
+        "//proto:foo",
         "@org_golang_google_protobuf//encoding/protojson",
     ],
 )
 
 go_binary(
-    name = "foo",
-    embed = [":foo_lib"],
+    name = "main",
+    embed = [":main_lib"],
     visibility = ["//visibility:public"],
 )
